--- a/thanks.html
+++ b/thanks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Thank you for connecting with us! We appreciate your interest and will be in touch shortly. Stay tuned for more updates and exclusive content.">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/nullstyle.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
