--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get in touch with us at MetaMints. Find our contact information, including email, phone number, and social media links. We're here to assist you with any questions or support you need.">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/nullstyle.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,5 +118,6 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
