--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore and buy unique NFTs on MetaMints. Discover a curated collection of digital art and collectibles, each with its own story and value. Join the NFT revolution and own a piece of the digital future today.">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/nullstyle.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
