--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Terms and Conditions for using MetaMints. Read our policies on user rights, responsibilities, and legal terms to understand how we manage and protect your information.">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/nullstyle.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
